Laying more framework

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="stylesheet" media="screen" href="!css/screen.css" />
-		<title>Yeenframe</title>
+		<link rel="stylesheet" media="screen" href="../!css/screen.css" />
+		<title id="headtitle"><!--JS inserts title--></title>
 	</head>
 	<body>
 		<!--Header, nav, main, footer-->
@@ -11,6 +11,7 @@
 		</header>
 		
 		<nav><ul>
+			<li>Home</li>
 			<li>Warframes</li>
 			<li>Weapons</li>
 			<li>Technical</li>
@@ -18,11 +19,13 @@
 		</ul></nav>
 		
 		<main>
-			<p>This site was created to promote off-meta builds and tomfoolery. If you're looking for brain-death meta builds with poor explanations, just go to <a href="https://overframe.gg/">Overframe</a> instead.</p>
+			<h1>Home Page</h1>
+			<p>This site was created to promote my own off-meta builds, fashionframe, tips, and tomfoolery. This site is not accepting user-submitted content. If you have constructive criticism for the webmaster (me), concerning site layout, bugs, etc., please refer to the email at the bottom of the page.</p>
+			<p>For the sake of simplicity, all builds will assume a Max Rank frame. I see no point in listing what an ability does when unranked, it just clutters the page.</p>
 		</main>
 		
-		<footer id="ftr"></footer>
-		<!--JS inserts footer-->
-		<!--<script src="!js/site.js"></script>-->
+		<footer id="ftr"><!--JS inserts footer--></footer>
+		
+		<script src="!js/site.js"></script>
 	</body>
 </html>
