Fixed homepage not pointing to stylesheet

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="stylesheet" media="screen" href="../!css/screen.css" />
+		<link rel="stylesheet" media="screen" href="!css/screen.css" />
 		<title id="headtitle"><!--JS inserts title--></title>
 	</head>
 	<body>
