Citrine completed for 35.5.6

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 		<main>
 			<h1>Home Page</h1>
 			<p>This site was created to promote my own off-meta builds, fashionframe, tips, and tomfoolery. This site is not accepting user-submitted content. If you have constructive criticism for the webmaster (me), concerning site layout, bugs, etc., please refer to the email at the bottom of the page.</p>
+			<p>This site will use an informal tone every now and again throughout its guides. It is the author's belief that a relaxed tone better conveys the importance and emphasis on elements that are deserving of such.</p>
 			<p>For the sake of simplicity, all builds will assume a Max Rank frame. I see no point in listing what an ability does when unranked, it just clutters the page.</p>
 		</main>
 		
