--- a/nyx/index.html
+++ b/nyx/index.html
@@ -19,10 +19,11 @@
 		</ul></nav>
 		
 		<main>
+			<p>Last updated: Update 35.5.6 (10 Apr 2024)</p>
 			<h1>Nyx</h1>
 			<p><b class="apassive">Passive:</b> Enemies are 20% less accurate when targeting Nyx, and when <b class="afourth">Absorb</b> is not active.</p>
 			<p>1st Ability, <b class="afirst">Mind Control:</b> Spend <b class="affeff">25 energy</b> to mind control one target up to <b class="affran">60m</b> away for <b class="affdur">45 seconds</b>. Any damage dealt to the target in the first 4 seconds is converted into a damage buff. <a target="_blank" rel="noopener noreferrer" href="../!images/nyx-mindcontrol-sqrt-of-6x.png">&lt;graph&gt;</a></p>
-			<p>2nd Ability, <b class="asecond">Psychic Bolts:</b> Spend <b class="affeff">50 energy</b> to throw 6 bolts <b class="affran">60m</b> away for <b class="affdur">45 seconds</b>. Any damage dealt to the target in the first 4 seconds is converted into a damage buff.</p>
+			<p>2nd Ability, <b class="asecond">Psychic Bolts:</b> Spend <b class="affeff">50 energy</b> to throw 6 bolts 60m away for <b class="affdur">45 seconds</b>. Any damage dealt to the target in the first 4 seconds is converted into a damage buff.</p>
 			<h2>Quick Rundown</h2>
 		</main>
 		
