Overhaul of Citrine's page, changes to stylesheet

--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
 		
 		<main>
 			<h1>Home Page</h1>
-			<p>This site was created to promote my own off-meta builds, fashionframe, tips, and tomfoolery. This site is not accepting user-submitted content. If you have constructive criticism for the webmaster (me), concerning site layout, bugs, etc., please refer to the email at the bottom of the page.</p>
+			<p>This site was created as an ad-free and lightweight alternative to the Fandom-hosted ("Wiki") site. It contains detailed descriptions of a Warframe's pros and cons as well as various build options which may be off-meta. The options provided should assist players who have acquired a Frame that they must use, yet dislike the use of it in its generally accepted role.</p>
+			<p>This site is NOT accepting user-submitted content. If you have constructive criticism for the webmaster (me), concerning site layout, bugs, etc., please refer to the email at the bottom of the page.</p>
 			<p>This site will use an informal tone every now and again throughout its guides. It is the author's belief that a relaxed tone better conveys the importance and emphasis on elements that are deserving of such.</p>
-			<p>For the sake of simplicity, all builds will assume a Max Rank frame. I see no point in listing what an ability does when unranked, it just clutters the page.</p>
+			<p>For the sake of simplicity, all Warframe ability detail will assume a Max Rank frame. The use cases for otherwise are few and far between.</p>
 		</main>
 		
 		<footer id="ftr"><!--JS inserts footer--></footer>
