Changed all <b> tags to <strong> tags.

--- a/citrine/index.html
+++ b/citrine/index.html
@@ -20,21 +20,22 @@
 		
 		<main>
 			<!--
-			<b class="afourth">Absorb</b>
+			<strong class="afourth">Absorb</strong>
 			-->
 			<p>Last updated: Update 35.5.6 (29 Jul 2024)</p>
 			<h1>Citrine</h1>
-			<p><b class="abl apassive">Passive:</b> Grants 5 HP/s to allies within 50m (NOT Affinity Range), scaling up to 25 HP/s after 200 health orb pickups.</p>
-			<p>1st Ability, <b class="abl afirst">Fractured Blast:</b> Spend <b class="affeff">25 energy</b> to hit all enemies within a <b class="affran">14 meter</b> cone for <b class="affstr">500 damage</b> of type Impact/Slash, and inflict them with 1 status proc of each. Targets that die under the effect of this skill are <b class="affstr">50 percent</b> more likely to drop Health Orbs and <b class="affstr">20 percent</b> more likely to drop Energy Orbs.</p>
-			<p>2nd Ability, <b class="abl asecond">Preserving Shell:</b> Spend <b class="affeff">50 energy</b> to provide <b class="affstr">40 percent</b> Damage Reduction to all allies in Affinity Range for <b class="affdur">25 seconds</b>. Damage Reduction increases up to 90%, adding <b class="affstr">3 percent</b> for kills and <b class="affstr">1 percent</b> for assists. After 1 second, the buff decays at 3%/s while between 90%&ndash;75%, and at 1%/s while between 75%&ndash;25%.</p>
-			<p>3rd Ability, <b class="abl athird">Prismatic Gem:</b> Spend <b class="affeff">75 energy</b> to place a gem in front of Citrine that targets enemies within <b class="affran">15 meters</b>, <b class="affstr">1000 damage</b> of <b>EACH</b> basic Elemental damage type, and all 4 respective status afflictions to enemies receiving weapon damage via Citrine or her allies. Enemies are affected outside the gem if the attacking player is inside the gem's radius, and enemies inside the gem's radius can be affected even if the attacking player is outside the gem's radius.</p>
+			<p><strong class="abl apassive">Passive:</strong> Grants 5 HP/s to allies within 50m (NOT Affinity Range), scaling up to 25 HP/s after 200 health orb pickups.</p>
+			<p>1st Ability, <strong class="abl afirst">Fractured Blast:</strong> Spend <strong class="affeff">25 energy</strong> to hit all enemies within a <strong class="affran">14 meter</strong> cone for <strong class="affstr">500 damage</strong> of type Impact/Slash, and inflict them with 1 status proc of each. Targets that die under the effect of this skill are <strong class="affstr">50 percent</strong> more likely to drop Health Orbs and <strong class="affstr">20 percent</strong> more likely to drop Energy Orbs.</p>
+			<p>2nd Ability, <strong class="abl asecond">Preserving Shell:</strong> Spend <strong class="affeff">50 energy</strong> to provide <strong class="affstr">40 percent</strong> Damage Reduction to all allies in Affinity Range for <strong class="affdur">25 seconds</strong>. Damage Reduction increases up to 90%, adding <strong class="affstr">3 percent</strong> for kills and <strong class="affstr">1 percent</strong> for assists. After 1 second, the buff decays at 3%/s while between 90%&ndash;75%, and at 1%/s while between 75%&ndash;25%. Can be recast while active to maintain the current Damage Reduction level.</p>
+			<p>3rd Ability, <strong class="abl athird">Prismatic Gem:</strong> Spend <strong class="affeff">75 energy</strong> to place a gem in front of Citrine that targets enemies within <strong class="affran">15 meters</strong>, <strong class="affstr">1000 damage</strong> of <strong>EACH</strong> basic Elemental damage type, and all 4 respective status afflictions to enemies receiving weapon damage via Citrine or her allies. Enemies are affected outside the gem if the attacking player is inside the gem's radius, and enemies inside the gem's radius can be affected even if the attacking player is outside the gem's radius.</p>
+			<p>4th Ability, <strong class="abl afourth">Crystallize:</strong> Spend <strong class="affeff">100 energy</strong></p>
 			
 			<h2>Caps and Thresholds</h2>
 			<p>The following are <em>informational</em>, and not necessarily requirements.</p>
 			<ul>
-				<li>A <b>threshold</b> of <b class="affstr">200%</b> Strength will result in a 100% chance to spawn Health Orbs with Fractured Blast. Going beyond 200% has a chance to produce an additional. One Blind Rage would nearly guarantee this effect; however, with Overextended, an additional 61% Strength would be needed to hit this threshold. Options would involve dropping Overextended and simply using Stretch and settling for a minimum of 145% Range, or simply devoting more mod space to Strength.</li>
-				<li>A <b>cap</b> of <b class="affstr">225%</b> Strength will start Preserving Shell's Damage Reduction at 90% immediately.</li>
-				<li>A <b>threshold</b> of <b class="affstr">100%</b> Strength is needed to yield 100% Status Chance on Prismatic Gem.</li>
+				<li>A <strong>threshold</strong> of <strong class="affstr">200%</strong> Strength will result in a 100% chance to spawn Health Orbs with Fractured Blast. Going beyond 200% has a chance to produce an additional. One Blind Rage would nearly guarantee this effect; however, with Overextended, an additional 61% Strength would be needed to hit this threshold. Options would involve dropping Overextended and simply using Stretch and settling for a minimum of 145% Range, or simply devoting more mod space to Strength.</li>
+				<li>A <strong>cap</strong> of <strong class="affstr">225%</strong> Strength will start Preserving Shell's Damage Reduction at 90% immediately.</li>
+				<li>A <strong>threshold</strong> of <strong class="affstr">100%</strong> Strength is needed to yield 100% Status Chance on Prismatic Gem.</li>
 			</ul>
 			
 			<h2>Quick Rundown</h2>
